# cuvis-ai-deepeiou

./: .gitignore  .secrets.baseline  CHANGELOG.md  LICENSE  README.md  README_TECHNICAL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cuvis_ai_deepeiou/: __init__.py
cuvis_ai_deepeiou/node/: __init__.py  bbox_feature_extractor.py  deepeiou_node.py  osnet_extractor.py  resnet_extractor.py
cuvis_ai_deepeiou/reid/: __init__.py  utils.py
cuvis_ai_deepeiou/reid/models/: __init__.py  osnet.py  resnet.py
deep_eiou_tracker/: Deep_EIoU.py  __init__.py  matching.py
examples/deepeiou/: README.md  deepeiou_from_detection_json.py  deepeiou_from_detection_json_with_reid.py  plugins.yaml
tests/cuvis_ai_deepeiou/: test_deepeiou_node.py  test_feature_extractors.py
