[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvis-ai-deepeiou"
dynamic = ["version"]
description = "DeepEIoU multi-object tracker with EIoU and deep feature ReID, cuvis.ai-compatible plugin."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "LicenseRef-Cubert-DeepEIoU-Permission"
license-files = ["LICENSE", "cuvis_ai_deepeiou/reid/LICENSE"]
keywords = ["cuvis-ai", "deepeiou", "tracking", "reid", "plugin"]
authors = [
    { name = "Hsiang-Wei Huang et al." },
    { name = "Cubert GmbH, Ulm, Germany", email = "cuvis.ai@cubert-gmbh.com" },
]
maintainers = [
    { name = "Cubert GmbH, Ulm, Germany", email = "cuvis.ai@cubert-gmbh.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    # Core framework (provides torch, numpy, Node base class, plugin system)
    "cuvis-ai-core>=0.1.3",
    # DeepEIoU runtime dependencies
    "scipy>=1.10.0",
    "lap>=0.4.0",
    # Auto-download ReID weights from HuggingFace Hub
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
fast = [
    # cython-bbox accelerates IoU; falls back to numpy if absent
    "cython-bbox>=0.1.5",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "interrogate>=1.5.0",
    "pip-audit",
    "detect-secrets",
    "bandit[toml]",
]

[project.urls]
Homepage = "https://github.com/cubert-hyperspectral/cuvis-ai-deepeiou"
Repository = "https://github.com/cubert-hyperspectral/cuvis-ai-deepeiou"
Documentation = "https://github.com/cubert-hyperspectral/cuvis-ai-deepeiou#readme"
Changelog = "https://github.com/cubert-hyperspectral/cuvis-ai-deepeiou/releases"
Issues = "https://github.com/cubert-hyperspectral/cuvis-ai-deepeiou/issues"

[tool.setuptools.packages.find]
include = ["cuvis_ai_deepeiou*", "deep_eiou_tracker*"]
# deep_eiou_tracker is the renamed upstream tracker/ — properly packaged,
# no sys.path manipulation needed. yolox/ and reid/ from Deep-EIoU are
# NOT included.

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
# cuvis-ai-core = { path = "../cuvis-ai-core", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["deep_eiou_tracker"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4"]
extend-select = ["ANN201", "ANN202", "ANN204"]
ignore = ["ANN401", "E501"]

[tool.ruff.lint.per-file-ignores]
"deep_eiou_tracker/**" = ["ALL"]
"tests/**" = ["ANN201", "ANN202", "ANN204"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
addopts = "-v -ra --showlocals --strict-markers --tb=short --color=yes --import-mode=importlib"
testpaths = ["tests"]
norecursedirs = ".* build dist CVS *.egg venv .venv .git deep_eiou_tracker"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
fail-under = 80.0
exclude = ["build", "tests", "deep_eiou_tracker"]
verbose = 2

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests", "build", "dist", "deep_eiou_tracker"]

[[tool.mypy.overrides]]
module = "deep_eiou_tracker.*"
follow_imports = "skip"

[tool.bandit]
exclude_dirs = ["tests", "deep_eiou_tracker"]
skips = ["B101", "B614"]
